[package]
name = "amtio-lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "amtio_lib"
path = "src/lib.rs"

[[bin]]
name = "amtio"
path = "src/cli.rs"

[dependencies]
argh = "0.1.19"
glob = "0.3.3"
log = "0.4.29"
tokio = { version = "1.51.1", features = ["fs", "mio", "time", "rt", "rt-multi-thread"] }
